--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,11 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "mcamara/laravel-localization": "^1.5",
+        "needim/noty": "^3.1",
+        "realrashid/sweet-alert": "^3.1",
         "yajra/laravel-datatables": "^1.5",
-        "yajra/laravel-datatables-oracle": "^9.10"
+        "yajra/laravel-datatables-oracle": "^9.10",
+        "yoeunes/toastr": "^1.2"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
