--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,9 @@
         "psr-4": {
             "App\\": "app/"
         },
+        "files": [
+            "app/Helpers/helpers.php"
+        ],
         "classmap": [
             "database/seeds",
             "database/factories"
