--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:LPYKxQkleieJFolHoHlwlGVk3dTK6eHEoSI+8fzKElY=
+APP_KEY=base64:K2lDFIVefBmVSwIU54vXa15hSOFMxXsoGcMeHpXdT+4=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://invoice.test
 
 LOG_CHANNEL=stack
+LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
