--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/ui": "^3.1",
         "laravelcollective/html": "^6.2",
         "maatwebsite/excel": "^3.1",
+        "pusher/pusher-php-server": "^4.1",
         "spatie/laravel-permission": "^3.18"
     },
     "require-dev": {
