--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:yLZDdGEUInc/HLcBJBevKJJn17F8WtzwZiIJIgzWpUI=
+APP_KEY=base64:poDwVUfZcy2otcHyOjKu8NRYgD07EA5qEL8itesnZF8=
 APP_DEBUG=true
 APP_URL=http://invoice.test
 
@@ -19,6 +19,8 @@ CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+
+MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
